--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ dist
 /music-box-dsPIC33.X/queuelogs
 /music-box-dsPIC33.X/defmplabxtrace.log
 /music-box-dsPIC33.X/defmplabxtrace.log.inx
+/music-box-dsPIC33.X/.ca/buildLog
