--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ dist
 /music-box-dsPIC33.X/nbproject/Makefile-local-default.mk
 /music-box-dsPIC33.X/nbproject/Makefile-variables.mk
 /music-box-dsPIC33.X/nbproject/Package-default.bash
+/music-box-dsPIC33.X/nbproject/private
 /music-box-dsPIC33.X/.generated_files/
 /music-box-dsPIC33.X/queuelogs
 /music-box-dsPIC33.X/defmplabxtrace.log
